--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.19",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.4.*",
@@ -20,8 +21,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
-        "symfony/debug-pack": "^1.0",
-        "symfony/maker-bundle": "^1.19"
+        "symfony/debug-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
